Datenbank angepasst StorageImpl.java erweitert Klassen angepasst